@@ -43,6 +43,7 @@ CHANGELOG
 - Improved the error message, when empty arguments are used in pure C++ mode.
 - Added character literal out of range testing and an additional corresponding 
   error message.
+- Fixed parsing of long character literals (such as '\x1234').
 
 Thu Apr  7 10:07:45 WEDT 2005
 Version 1.1.16
